--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -5,4 +5,270 @@ image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
 hide-cta: hide
 ---
-<p>Some text about me</p>
+<p>Send a message using the form below. All data will be stored in the strictest confidence, and will not be passed to any third party without your permission.</p>
+
+<!-- Note :
+   - You can modify the font style and form style to suit your website. 
+   - Code lines with comments Do not remove this code are required for the form to work properly, make sure that you do not remove these lines of code. 
+   - The Mandatory check script can modified as to suit your business needs. 
+   - It is important that you test the modified form before going live.-->
+   <div id='crmWebToEntityForm' class='zcwf_lblLeft crmWebToEntityForm' style='background-color: white;color: black;max-width: 600px;'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+     <META HTTP-EQUIV ='content-type' CONTENT='text/html;charset=UTF-8'>
+     <form action='https://crm.zoho.eu/crm/WebToLeadForm' name=WebToLeads188934000000911014 method='POST' onSubmit='javascript:document.charset="UTF-8"; return checkMandatory188934000000911014()' accept-charset='UTF-8'>
+   <input type='text' style='display:none;' name='xnQsjsdp' value='a8d89f507817013112d869150786a7062b484a938af08c62189b53a1e037e69e'></input> 
+   <input type='hidden' name='zc_gad' id='zc_gad' value=''></input> 
+   <input type='text' style='display:none;' name='xmIwtLD' value='7f777da79e9d634279f4f0ded50fa2896ac309ae03ac52152fda05d77da9dee6'></input> 
+   <input type='text'  style='display:none;' name='actionType' value='TGVhZHM='></input>
+   <input type='text' style='display:none;' name='returnURL' value='https&#x3a;&#x2f;&#x2f;berthelemy.github.io&#x2f;faouetinformatique&#x2f;form-submitted' > </input>
+       <!-- Do not remove this code. -->
+  <style>
+  html,body{
+      margin: 0px;
+  }
+  #crmWebToEntityForm.zcwf_lblLeft {
+      width:100%;
+      padding: 25px;
+      margin: 0 auto;
+      box-sizing: border-box;
+  }
+  #crmWebToEntityForm.zcwf_lblLeft * {
+      box-sizing: border-box;
+  }
+  #crmWebToEntityForm{text-align: left;}
+  #crmWebToEntityForm * {
+      direction: ltr;
+  }
+  .zcwf_lblLeft .zcwf_title {
+      word-wrap: break-word;
+      padding: 0px 6px 10px;
+      font-weight: bold;
+  }
+  .zcwf_lblLeft .zcwf_col_fld input[type=text], .zcwf_lblLeft .zcwf_col_fld textarea {
+      width: 60%;
+      border: 1px solid #c0c6cc !important;
+      resize: vertical;
+      border-radius: 2px;
+      float: left;
+  }
+  .zcwf_lblLeft .zcwf_col_lab {
+      width: 30%;
+      word-break: break-word;
+      padding: 0px 6px 0px;
+      margin-right: 10px;
+      margin-top: 5px;
+      float: left;
+      min-height: 1px;
+  }
+  .zcwf_lblLeft .zcwf_col_fld {
+      float: left;
+      width: 68%;
+      padding: 0px 6px 0px;
+      position: relative;
+      margin-top: 5px;
+  }
+  .zcwf_lblLeft .zcwf_privacy{padding: 6px;}
+  .zcwf_lblLeft .wfrm_fld_dpNn{display: none;}
+  .dIB{display: inline-block;}
+  .zcwf_lblLeft .zcwf_col_fld_slt {
+      width: 60%;
+      border: 1px solid #ccc;
+      background: #fff;
+      border-radius: 4px;
+      font-size: 12px;
+      float: left;
+      resize: vertical;
+      padding: 2px 5px;
+  }
+  .zcwf_lblLeft .zcwf_row:after, .zcwf_lblLeft .zcwf_col_fld:after {
+      content: '';
+      display: table;
+      clear: both;
+  }
+  .zcwf_lblLeft .zcwf_col_help {
+      float: left;
+      margin-left: 7px;
+      font-size: 12px;
+      max-width: 35%;
+      word-break: break-word;
+  }
+  .zcwf_lblLeft .zcwf_help_icon {
+      cursor: pointer;
+      width: 16px;
+      height: 16px;
+      display: inline-block;
+      background: #fff;
+      border: 1px solid #c0c6cc;
+      color: #c1c1c1;
+      text-align: center;
+      font-size: 11px;
+      line-height: 16px;
+      font-weight: bold;
+      border-radius: 50%;
+  }
+  .zcwf_lblLeft .zcwf_row {margin: 15px 0px;}
+  .zcwf_lblLeft .formsubmit {
+      margin-right: 5px;
+      cursor: pointer;
+      color: var(--baseColor);
+      font-size: 12px;
+  }
+  .zcwf_lblLeft .zcwf_privacy_txt {
+      width: 90%;
+      color: rgb(0, 0, 0);
+      font-size: 12px;
+      font-family: Arial;
+      display: inline-block;
+      vertical-align: top;
+      color: var(--baseColor);
+      padding-top: 2px;
+      margin-left: 6px;
+  }
+  .zcwf_lblLeft .zcwf_button {
+      font-size: 12px;
+      color: var(--baseColor);
+      border: 1px solid #c0c6cc;
+      padding: 3px 9px;
+      border-radius: 4px;
+      cursor: pointer;
+      max-width: 120px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+  }
+  .zcwf_lblLeft .zcwf_tooltip_over{
+      position: relative;
+  }
+  .zcwf_lblLeft .zcwf_tooltip_ctn{
+      position: absolute;
+      background: #dedede;
+      padding: 3px 6px;
+      top: 3px;
+      border-radius: 4px;word-break: break-word;
+      min-width: 100px;
+      max-width: 150px;
+      color: var(--baseColor);
+      z-index: 100;
+  }
+  .zcwf_lblLeft .zcwf_ckbox{
+      float: left;
+  }
+  .zcwf_lblLeft .zcwf_file{
+      width: 55%;
+      box-sizing: border-box;
+      float: left;
+  }
+  .clearB:after{
+      content:'';
+      display: block;
+      clear: both;
+  }
+  @media all and (max-width: 600px) {
+      .zcwf_lblLeft .zcwf_col_lab, .zcwf_lblLeft .zcwf_col_fld {
+          width: auto;
+          float: none !important;
+      }
+      .zcwf_lblLeft .zcwf_col_help {width: 40%;}
+  }
+  </style>
+  <div class='zcwf_title' style='max-width: 600px;color: black; font-family:Arial;'>Contact form</div>
+  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:12px; font-family: Arial;'><label for='First_Name'>First Name<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><input type='text' id='First_Name' name='First Name' maxlength='40'></input><div class='zcwf_col_help'></div></div></div>
+  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:12px; font-family: Arial;'><label for='Last_Name'>Last Name<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><input type='text' id='Last_Name' name='Last Name' maxlength='80'></input><div class='zcwf_col_help'></div></div></div>
+  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:12px; font-family: Arial;'><label for='Company'>Organisation &#x28;if applicable&#x29;</label></div><div class='zcwf_col_fld'><input type='text' id='Company' name='Company' maxlength='200'></input><div class='zcwf_col_help'></div></div></div>
+  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:12px; font-family: Arial;'><label for='Email'>Email<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><input type='text' ftype='email' id='Email' name='Email' maxlength='100'></input><div class='zcwf_col_help'></div></div></div>
+  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:12px; font-family: Arial;'><label for='Phone'>Phone</label></div><div class='zcwf_col_fld'><input type='text' id='Phone' name='Phone' maxlength='30'></input><div class='zcwf_col_help'></div></div></div>
+  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:12px; font-family: Arial;'><label for='Description'>How can I help you?<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><textarea id='Description' name='Description'></textarea><div class='zcwf_col_help'></div></div></div>
+  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:12px; font-family: Arial;'><label for='Lead_Source'>How did you hear about Faou&euml;t Informatique</label></div><div class='zcwf_col_fld'><select class='zcwf_col_fld_slt' id='Lead_Source' name='Lead Source'  >
+              <option value='-None-'>-None-</option>
+              <option value='Advertisement'>Advertisement</option>
+              <option value='Cold&#x20;Call'>Cold Call</option>
+              <option value='Employee&#x20;Referral'>Employee Referral</option>
+              <option value='External&#x20;Referral'>External Referral</option>
+              <option value='Partner'>Partner</option>
+              <option value='Public&#x20;Relations'>Public Relations</option>
+              <option value='Trade&#x20;Show'>Trade Show</option>
+              <option value='Web&#x20;Form'>Web Form</option>
+              <option value='Search&#x20;Engine'>Search Engine</option>
+              <option value='Facebook'>Facebook</option>
+              <option value='Twitter'>Twitter</option>
+          </select><div class='zcwf_col_help'></div></div></div><div class='zcwf_row'><div class='zcwf_col_lab'></div><div class='zcwf_col_fld'><input type='submit' id='formsubmit' class='formsubmit zcwf_button' value='Submit' title='Submit'><input type='reset' class='zcwf_button' name='reset' value='Reset' title='Reset'></div></div>
+      <script>
+      function validateEmail188934000000911014()
+      {
+          var form = document.forms['WebToLeads188934000000911014'];
+          var emailFld = form.querySelectorAll('[ftype=email]');
+          var i;
+          for (i = 0; i < emailFld.length; i++)
+          {
+              var emailVal = emailFld[i].value;
+              if((emailVal.replace(/^\s+|\s+$/g, '')).length!=0 )
+              {
+                  var atpos=emailVal.indexOf('@');
+                  var dotpos=emailVal.lastIndexOf('.');
+                  if (atpos<1 || dotpos<atpos+2 || dotpos+2>=emailVal.length)
+                  {
+                      alert('Please enter a valid email address. ');
+                      emailFld[i].focus();
+                      return false;
+                  }
+              }
+          }
+          return true;
+      }
+  
+         function checkMandatory188934000000911014() {
+          var mndFileds = new Array('First Name','Last Name','Email','Description');
+          var fldLangVal = new Array('First\x20Name','Last\x20Name','Email','How\x20can\x20I\x20help\x20you\x3F');
+          for(i=0;i<mndFileds.length;i++) {
+            var fieldObj=document.forms['WebToLeads188934000000911014'][mndFileds[i]];
+            if(fieldObj) {
+              if (((fieldObj.value).replace(/^\s+|\s+$/g, '')).length==0) {
+               if(fieldObj.type =='file')
+                  { 
+                   alert('Please select a file to upload.'); 
+                   fieldObj.focus(); 
+                   return false;
+                  } 
+              alert(fldLangVal[i] +' cannot be empty.'); 
+                        fieldObj.focus();
+                        return false;
+              }  else if(fieldObj.nodeName=='SELECT') {
+                       if(fieldObj.options[fieldObj.selectedIndex].value=='-None-') {
+                  alert(fldLangVal[i] +' cannot be none.'); 
+                  fieldObj.focus();
+                  return false;
+                 }
+              } else if(fieldObj.type =='checkbox'){
+                  if(fieldObj.checked == false){
+                  alert('Please accept  '+fldLangVal[i]);
+                  fieldObj.focus();
+                  return false;
+                 } 
+               } 
+               try {
+                   if(fieldObj.name == 'Last Name') {
+                  name = fieldObj.value;
+                     }
+              } catch (e) {}
+              }
+          }
+          if(!validateEmail188934000000911014()){return false;}
+          document.querySelector('.crmWebToEntityForm .formsubmit').setAttribute('disabled', true);
+      }
+  
+  function tooltipShow188934000000911014(el){
+      var tooltip = el.nextElementSibling;
+      var tooltipDisplay = tooltip.style.display;
+      if(tooltipDisplay == 'none'){
+          var allTooltip = document.getElementsByClassName('zcwf_tooltip_over');
+          for(i=0; i<allTooltip.length; i++){
+              allTooltip[i].style.display='none';
+          }
+          tooltip.style.display = 'block';
+      }else{
+          tooltip.style.display='none';
+      }
+  }
+  </script>
+      </form>
+  </div>
