--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -16,12 +16,12 @@ hide-cta: hide
    <div id='crmWebToEntityForm' class='zcwf_lblLeft crmWebToEntityForm' style='background-color: white;color: black;max-width: 600px;'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
      <META HTTP-EQUIV ='content-type' CONTENT='text/html;charset=UTF-8'>
-     <form action='https://crm.zoho.eu/crm/WebToLeadForm' name=WebToLeads188934000000911014 method='POST' onSubmit='javascript:document.charset="UTF-8"; return checkMandatory188934000000911014()' accept-charset='UTF-8'>
+     <form action='https://crm.zoho.eu/crm/WebToContactForm' name=WebToContacts188934000000912047 method='POST' onSubmit='javascript:document.charset="UTF-8"; return checkMandatory188934000000912047()' accept-charset='UTF-8'>
    <input type='text' style='display:none;' name='xnQsjsdp' value='a8d89f507817013112d869150786a7062b484a938af08c62189b53a1e037e69e'></input> 
    <input type='hidden' name='zc_gad' id='zc_gad' value=''></input> 
-   <input type='text' style='display:none;' name='xmIwtLD' value='7f777da79e9d634279f4f0ded50fa2896ac309ae03ac52152fda05d77da9dee6'></input> 
-   <input type='text'  style='display:none;' name='actionType' value='TGVhZHM='></input>
-   <input type='text' style='display:none;' name='returnURL' value='https&#x3a;&#x2f;&#x2f;berthelemy.github.io&#x2f;faouetinformatique&#x2f;form-submitted' > </input>
+   <input type='text' style='display:none;' name='xmIwtLD' value='7f777da79e9d634279f4f0ded50fa2890d41a6d72139606031aeebac61428dec'></input> 
+   <input type='text'  style='display:none;' name='actionType' value='Q29udGFjdHM='></input>
+   <input type='text' style='display:none;' name='returnURL' value='https&#x3a;&#x2f;&#x2f;berthelemy.github.io&#x2f;faouetinformatique&#x2f;contacts' > </input>
        <!-- Do not remove this code. -->
   <style>
   html,body{
@@ -76,7 +76,7 @@ hide-cta: hide
       border: 1px solid #ccc;
       background: #fff;
       border-radius: 4px;
-      font-size: 12px;
+      font-size: 15px;
       float: left;
       resize: vertical;
       padding: 2px 5px;
@@ -89,7 +89,7 @@ hide-cta: hide
   .zcwf_lblLeft .zcwf_col_help {
       float: left;
       margin-left: 7px;
-      font-size: 12px;
+      font-size: 15px;
       max-width: 35%;
       word-break: break-word;
   }
@@ -102,7 +102,7 @@ hide-cta: hide
       border: 1px solid #c0c6cc;
       color: #c1c1c1;
       text-align: center;
-      /*font-size: 11px;*/
+      font-size: 11px;
       line-height: 16px;
       font-weight: bold;
       border-radius: 50%;
@@ -112,12 +112,12 @@ hide-cta: hide
       margin-right: 5px;
       cursor: pointer;
       color: var(--baseColor);
-      font-size: 12px;
+      font-size: 15px;
   }
   .zcwf_lblLeft .zcwf_privacy_txt {
       width: 90%;
       color: rgb(0, 0, 0);
-      /*font-size: 12px;*/
+      font-size: 15px;
       font-family: Arial;
       display: inline-block;
       vertical-align: top;
@@ -126,7 +126,7 @@ hide-cta: hide
       margin-left: 6px;
   }
   .zcwf_lblLeft .zcwf_button {
-      font-size: 12px;
+      font-size: 15px;
       color: var(--baseColor);
       border: 1px solid #c0c6cc;
       padding: 3px 9px;
@@ -172,14 +172,12 @@ hide-cta: hide
       .zcwf_lblLeft .zcwf_col_help {width: 40%;}
   }
   </style>
-  <div class='zcwf_title' style='max-width: 600px;color: black; font-family:Arial;'>Contact form</div>
-  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:12px; font-family: Arial;'><label for='First_Name'>First Name<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><input type='text' id='First_Name' name='First Name' maxlength='40'></input><div class='zcwf_col_help'></div></div></div>
-  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:12px; font-family: Arial;'><label for='Last_Name'>Last Name<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><input type='text' id='Last_Name' name='Last Name' maxlength='80'></input><div class='zcwf_col_help'></div></div></div>
-  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:12px; font-family: Arial;'><label for='Company'>Organisation &#x28;if applicable&#x29;</label></div><div class='zcwf_col_fld'><input type='text' id='Company' name='Company' maxlength='200'></input><div class='zcwf_col_help'></div></div></div>
-  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:12px; font-family: Arial;'><label for='Email'>Email<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><input type='text' ftype='email' id='Email' name='Email' maxlength='100'></input><div class='zcwf_col_help'></div></div></div>
-  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:12px; font-family: Arial;'><label for='Phone'>Phone</label></div><div class='zcwf_col_fld'><input type='text' id='Phone' name='Phone' maxlength='30'></input><div class='zcwf_col_help'></div></div></div>
-  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:12px; font-family: Arial;'><label for='Description'>How can I help you?<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><textarea id='Description' name='Description'></textarea><div class='zcwf_col_help'></div></div></div>
-  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:12px; font-family: Arial;'><label for='Lead_Source'>How did you hear about Faou&euml;t Informatique</label></div><div class='zcwf_col_fld'><select class='zcwf_col_fld_slt' id='Lead_Source' name='Lead Source'  >
+  <div class='zcwf_title' style='max-width: 600px;color: black; font-family:Arial;'>Initial Contact</div>
+  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:15px; font-family: Arial;'><label for='First_Name'>First Name<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><input type='text' id='First_Name' name='First Name' maxlength='40'></input><div class='zcwf_col_help'></div></div></div>
+  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:15px; font-family: Arial;'><label for='Last_Name'>Last Name<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><input type='text' id='Last_Name' name='Last Name' maxlength='80'></input><div class='zcwf_col_help'></div></div></div>
+  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:15px; font-family: Arial;'><label for='Email'>Email<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><input type='text' ftype='email' id='Email' name='Email' maxlength='100'></input><div class='zcwf_col_help'></div></div></div>
+  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:15px; font-family: Arial;'><label for='Phone'>Phone</label></div><div class='zcwf_col_fld'><input type='text' id='Phone' name='Phone' maxlength='50'></input><div class='zcwf_col_help'></div></div></div>
+  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:15px; font-family: Arial;'><label for='Lead_Source'>How did you find me&#x3f;</label></div><div class='zcwf_col_fld'><select class='zcwf_col_fld_slt' id='Lead_Source' name='Lead Source'  >
               <option value='-None-'>-None-</option>
               <option value='Advertisement'>Advertisement</option>
               <option value='Cold&#x20;Call'>Cold Call</option>
@@ -192,11 +190,12 @@ hide-cta: hide
               <option value='Search&#x20;Engine'>Search Engine</option>
               <option value='Facebook'>Facebook</option>
               <option value='Twitter'>Twitter</option>
-          </select><div class='zcwf_col_help'></div></div></div><div class='zcwf_row'><div class='zcwf_col_lab'></div><div class='zcwf_col_fld'><input type='submit' id='formsubmit' class='formsubmit zcwf_button' value='Submit' title='Submit'><input type='reset' class='zcwf_button' name='reset' value='Reset' title='Reset'></div></div>
+          </select><div class='zcwf_col_help'></div></div></div>
+  <div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:15px; font-family: Arial;'><label for='Description'>How can I help?<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><textarea id='Description' name='Description'></textarea><div class='zcwf_col_help'></div></div></div><div class='zcwf_row'><div class='zcwf_col_lab'></div><div class='zcwf_col_fld'><input type='submit' id='formsubmit' class='formsubmit zcwf_button' value='Submit' title='Submit'><input type='reset' class='zcwf_button' name='reset' value='Reset' title='Reset'></div></div>
       <script>
-      function validateEmail188934000000911014()
+      function validateEmail188934000000912047()
       {
-          var form = document.forms['WebToLeads188934000000911014'];
+          var form = document.forms['WebToContacts188934000000912047'];
           var emailFld = form.querySelectorAll('[ftype=email]');
           var i;
           for (i = 0; i < emailFld.length; i++)
@@ -217,11 +216,11 @@ hide-cta: hide
           return true;
       }
   
-         function checkMandatory188934000000911014() {
+         function checkMandatory188934000000912047() {
           var mndFileds = new Array('First Name','Last Name','Email','Description');
-          var fldLangVal = new Array('First\x20Name','Last\x20Name','Email','How\x20can\x20I\x20help\x20you\x3F');
+          var fldLangVal = new Array('First\x20Name','Last\x20Name','Email','How\x20can\x20I\x20help\x3F');
           for(i=0;i<mndFileds.length;i++) {
-            var fieldObj=document.forms['WebToLeads188934000000911014'][mndFileds[i]];
+            var fieldObj=document.forms['WebToContacts188934000000912047'][mndFileds[i]];
             if(fieldObj) {
               if (((fieldObj.value).replace(/^\s+|\s+$/g, '')).length==0) {
                if(fieldObj.type =='file')
@@ -253,11 +252,11 @@ hide-cta: hide
               } catch (e) {}
               }
           }
-          if(!validateEmail188934000000911014()){return false;}
+          if(!validateEmail188934000000912047()){return false;}
           document.querySelector('.crmWebToEntityForm .formsubmit').setAttribute('disabled', true);
       }
   
-  function tooltipShow188934000000911014(el){
+  function tooltipShow188934000000912047(el){
       var tooltip = el.nextElementSibling;
       var tooltipDisplay = tooltip.style.display;
       if(tooltipDisplay == 'none'){
