--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -5,7 +5,7 @@ image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
 hide-cta: hide
 ---
-<p>How can I help?</p>
+<p>How can we help?</p>
 <p>Send a message to <a href="mailto:info@faouetinformatique.fr">info@faouetinformatique.fr</a> or call on <a href="tel:0033662646657">+33 (0)6 62 64 66 57</a></p>
 <p>All data will be stored and processed in accordance to our <a href="{{ site.baseurl }}/privacy-policy" target="_blank">privacy policy</a>.</p>
 
