--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -6,7 +6,20 @@ image-alt: Person creating a Wordpress website
 hide-cta: hide
 ---
 <p>How can we help?</p>
-<p>Send a message to <a href="mailto:info@faouetinformatique.fr">info@faouetinformatique.fr</a> or call on <a href="tel:0033662646657">+33 (0)6 62 64 66 57</a></p>
-<p>All data will be stored and processed in accordance to our <a href="{{ site.baseurl }}/privacy-policy" target="_blank">privacy policy</a>.</p>
+<div class="row">
+    <article class="col-6 col-12-mobile special compressed">
+<header>
+    <h3>Send a message</h3>
+</header>
+        <p><a href="mailto:info@faouetinformatique.fr">info@faouetinformatique.fr</a></p>
+        </article>
+        <article class="col-6 col-12-mobile special compressed">
+            <header>
+                <h3>Call</h3>
+            </header>
+            <p><a href="tel:0033662646657">+33 (0)6 62 64 66 57</a></p>
+        </article>
+</div>
+<p class="center">All data will be stored and processed in accordance to our <a href="{{ site.baseurl }}/privacy-policy" target="_blank">privacy policy</a>.</p>
 
 <!-- TO DO: Add form here -->
