--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -7,17 +7,15 @@ hide-cta: hide
 ---
 <p>How can we help?</p>
 <div class="row">
-    <article class="col-6 col-12-mobile special compressed">
+    <article class="col-6 col-12-mobile special">
 <header>
-    <h3>Send a message</h3>
+    <h3>Email: <a href="mailto:info@faouetinformatique.fr">info@faouetinformatique.fr</a></h3>
 </header>
-        <p><a href="mailto:info@faouetinformatique.fr">info@faouetinformatique.fr</a></p>
         </article>
-        <article class="col-6 col-12-mobile special compressed">
+        <article class="col-6 col-12-mobile special">
             <header>
-                <h3>Call</h3>
+                <h3>Call: <a href="tel:0033662646657">+33 (0)6 62 64 66 57</a></h3>
             </header>
-            <p><a href="tel:0033662646657">+33 (0)6 62 64 66 57</a></p>
         </article>
 </div>
 <p class="center">All data will be stored and processed in accordance to our <a href="{{ site.baseurl }}/privacy-policy" target="_blank">privacy policy</a>.</p>
