--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -5,7 +5,7 @@ image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
 hide-cta: hide
 ---
-<p>How can we help?</p>
+<p>Request a no obligation quote or get in touch to discuss your needs.</p>
 <div class="row">
     <article class="col-6 col-12-mobile special">
 <header>
