--- a/_pages/prices.html
+++ b/_pages/prices.html
@@ -6,6 +6,15 @@ image-alt: Woman using a laptop
 image-credit: Image by <a href="https://pixabay.com/users/janeb13-725943/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1185626">Welcome to All ! ツ</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1185626">Pixabay</a>
 datatable: prices
 ---
+## Strategy
+## Support
+## systems
+## Websites
+Micro organisation (one or two employees/volunteers and fewer than 15 customers)
+Small organisation (3-10 employees/volunteers and fewer than 50 customers)
+Medium organisation (11-50 employees/volunteers and fewer than 500 customers)
+<!-- Add details of orgs -->
+
 
 <table id="prices">
     <thead>
